--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "E.B.'s Lab",
-  "name": "E.B.'s Lab",
+  "short_name": "E.B.'s Lab ",
+  "name": "🐝 E.B.'s Lab 🐝",
   "icons": [
     {
       "src": "favicon.ico",
